Fixed mobile alignment

--- a/src/index.css
+++ b/src/index.css
@@ -5,15 +5,16 @@ body {
 
 .container {
   margin-top: 20px;
-  display: flex;
-  margin-left: auto;
-  margin-right: auto;  
-  width: 100%;
-  }
+  display: flex;  
+  width: inherit;
+  justify-content: center;
+}
 
 @media only screen and (min-width: 600px) {
   .container {
     width: 280px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
